Updated HeapSort,and some Java Programs

--- a/C/HeapSort/Makefile
+++ b/C/HeapSort/Makefile
@@ -1,7 +1,9 @@
 
 
 # We can group a set of commands under a same name 
+DEBUG = -g
 
-HeapSort: HeapSort.c
-	gcc $^ -o $@
+Application: Application.c HeapSort.c HeapSort.h
+	g++ $(DEBUG) Application.c HeapSort.c -o $@
+
 
