--- a/C/Huffman/Makefile
+++ b/C/Huffman/Makefile
@@ -1,3 +1,3 @@
 
-Compress : Driver.c tree.c Compress.h
-	gcc Driver.c tree.c -std=c99 -o Compress
+Compress : Driver.c tree.c Encode.c Compress.h
+	gcc Driver.c tree.c Encode.c -std=c99 -o Compress
